* Copied over latest Unix connector code from Nervepoint's identity system (some of the encodings were not correct and would not work on VMPlatform). * Added PasswordResetType to setPassword() API (small step in the work for future replacement of NAM API with I4J)